# nicegui-component-based

./: .gitignore  README.md
app/: README.md  app.db  config.json  create_config.py  header.py  main.py  pyproject.toml
app/.nicegui/: storage-user-8062b1f6-976a-4b51-89fd-79340494df28.json
app/assets/css/: global-css.css
app/components/: dashboard_content.py  data_content.py  database_content.py  orders_content.py  packings_content.py  pallets_content.py  print_component.py  production_content.py  settings_content.py  shipping_content.py
app/database/: crud.py  db.py  init_db.py  models.py
app/db/: database.py
app/services/: __init__.py  auth_service.py  helpers.py  user_service.py
